# fraud-detection-django-app

./: Dockerfile  Procfile  README.md  db.sqlite3  dockerignore  entrypoint.sh  main.py  manage.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
apps/accounts/: admin.py  apps.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/api/: apps.py  urls.py  views.py
apps/dashboard/: apps.py  background_stream.py  consumers.py  dashboard_apps.py  routing.py  urls.py  views.py
apps/dashboard/management/commands/: seed_transactions.py  stream_transactions.py
apps/ml/: apps.py  fraud_detector.py  model_service.py
apps/reports/: apps.py  pdf_generator.py  urls.py  views.py
apps/transactions/: admin.py  apps.py  models.py
apps/transactions/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
config_temp/: asgi.py  settings.py  urls.py  wsgi.py
ml_engine/: client_cache.py  data_generator.py  train_models.py
models/: feature_names.pkl  isolation_forest.pkl  one_class_svm.pkl  random_forest.pkl  scaler.pkl
static/css/: main.css
staticfiles/admin/css/: responsive.css
staticfiles/css/: main.css
templates/accounts/: login.html  profile.html
templates/base/: base.html
templates/dashboard/: alerts.html  index.html  map.html  transactions.html
templates/reports/: generate.html
