[project]
name = "fortal-fraud"
version = "0.1.0"
description = "Application de détection de fraudes bancaires"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.0",
    "faker>=40.11.1",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "whitenoise>=6.12.0",
]
